--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <div class="header">
                 <div class="logo">
                     <img src="./cerrejeria-24-hs.png" alt="">
-                    <!-- <span class="material-symbols-outlined">key_vertical</span> -->
                 </div>
                 <div class="etc">
                     <a href="#about">Información</a>
@@ -50,13 +49,90 @@
                 </div>
             </div>
         </div>
-
-
     </section>
-    <section>
-        <div class="footer">
-            
+    <section class="main-servicio">
+        <div class="cont-servicio">
+            <div class="servicio">
+                <h2>Servicios de urgencia</h2>
+                <p>En CabaCerrajeria. te ofrecemos cerrajería profesional y de plena confianza. Trabajamos con todas las marcas y modelos de cerraduras en aberturas y vehiculares, puertas blindadas y cajas fuertes.</p>
+                    <ul>
+                        <li>- Apertura de puerta de vehiculo</li>
+                        <li>- Llaves extraviadas</li>
+                        <li>- Apertura de puerta domicilearia</li>
+                        <li>- Cerradura bloqueada</li>
+                        <li>- Atencion a consorcios</li>
+                        <li>- Servicio de urgencias</li>
+                    </ul>
+            </div>
+            <div class="img-servicio">
+                <img src="./servicio2.png" alt="">
+            </div>
         </div>
+    </section>
+    <section class="main-pagos">
+        <div class="cont-pagos">
+            <div class="pagos">
+                <p class="tit-pago">Aceptamos todo medio de pago</p>
+                <ul>
+                    <li>- Depósito y transferencia bancaria.</li>
+                    <li>- Efectivo.</li>
+                    <li>- Medios digitales.</li>
+                    <li>- Tarjetas de Crédito.</li>
+                    <li>- Tarjetas de Débito.</li>
+                </ul>
+                <i>¡Facturación de nuestros trabajos!</i>
+            </div>
+            <div class="img-pago">
+                <img src="./medios-pago.jpg" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="main-nos">
+        <div class="cont-nos">
+            <div class="desk">
+                <p>CABA Cerrajeria</p>
+                <h3>¿Por qué elegirnos?</h3>
+                <i>Elige Cerrajería CABA porque ofrecemos soluciones inmediatas y confiables para tus necesidades de cerrajería. 
+                    Nuestro equipo altamente capacitado está listo para responder a tus emergencias las 24 horas del día, los 7 días de la semana. Ya sea que necesites una apertura rápida de puerta, reparación de cerradura o cualquier otro servicio, estamos aquí para brindarte tranquilidad y seguridad en cualquier momento.</i>
+            </div>
+            <div class="cont-cuadros">
+                <div class="pa">
+                    <div class="c1">Cobertura en CABA</div>
+                    <div class="c2">Servicios más solicitados</div>
+                </div>
+                <div class="pb">
+                    <div class="c3">Urgencias 24/7</div>
+                    <div class="c4">Moviles equipados</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer-gen">
+        <footer>
+            <div class="about">
+                <h4>Nosotros</h4>
+                <div class="cont-about">
+                    Brindamos Servicio de Urgencias de Cerrajería las 24 hs. Con nuestro servicio nadie duerme fuera de casa.
+
+                    Sin intermediarios, Confiables y Rápidos. Solucionamos cualquier problema de Cerrajería en su Domicilio, Auto, Oficina o Consorcio.                </div>
+            </div>
+            <div class="information">
+                <h4>Información</h4>
+                <ul class="cont-info">
+                    <li><i class="fa fa-map-marker"></i>La Tablada, CABA</li>
+                    <li><i class="fa fa-envelope"></i><a href="mailto:#">adrian@gmail.com</a></li>
+                    <li><i class="fa fa-mobile" aria-hidden="true"></i> <a href="https://wa.me/5491138059655?text=Hola,%20necesito%20ayuda%20urgente%20con%20una%20cerradura.%20%C2%BFPueden%20asistir%20ahora?" target="_blank">(11)38059655</a></li>
+                </ul>
+            </div>
+            <div class="follow">
+                <h4>Seguinos</h4>
+                <ul>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </footer>
     </section>
     <a href="https://wa.me/5491138059655?text=Hola,%20necesito%20ayuda%20urgente%20con%20una%20cerradura.%20%C2%BFPueden%20asistir%20ahora?" 
    target="_blank" class="whatsapp-btn"><i class="fa fa-whatsapp"  alt="WhatsApp"></i></a>
