--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                 <div class="cont-about">
                     Brindamos Servicio de Urgencias de Cerrajería las 24 hs. Con nuestro servicio nadie duerme fuera de casa.
 
-                    Sin intermediarios, Confiables y Rápidos. Solucionamos cualquier problema de Cerrajería en su Domicilio, Auto, Oficina o Consorcio.                </div>
+                    Sin intermediarios, Confiables y Rápidos. Solucionamos cualquier problema de Cerrajería en su Domicilio.</div>
             </div>
             <div class="information">
                 <h4>Información</h4>
                 <ul class="cont-info">
                     <li><i class="fa fa-map-marker"></i>La Tablada, CABA</li>
-                    <li><i class="fa fa-envelope"></i><a href="mailto:#">adrian@gmail.com</a></li>
+                    <li><i class="fa fa-envelope"></i><a href="mailto:#">cabacerrajerias@gmail.com</a></li>
                     <li><i class="fa fa-mobile" aria-hidden="true"></i> <a href="https://wa.me/5491138059655?text=Hola,%20necesito%20ayuda%20urgente%20con%20una%20cerradura.%20%C2%BFPueden%20asistir%20ahora?" target="_blank">(11)38059655</a></li>
                 </ul>
             </div>
